<resources>
    <string name="app_name">Author Hub</string>
    <string name="title_activity_nav_home">NavHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">authorhubproject@gmail.com</string>
    <string name="app_version">Version 1.0.0</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favourite">Favourites</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_announcement">Announcement</string>
    <string name="menu_about_us">About Us</string>
    <string name="search">Search</string>
    <string name="authors">Authors</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>