<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="Favourites" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_baseline_annoucement_24"
            android:title="@string/menu_announcement" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_contact_us_24"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_about_us_24"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_about_us_24"
            android:title="logout" />
    </group>
</menu>